Wed Feb  7 16:05:22 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (parse_quotedwords): %w should allow parenthesis escape.

Wed Feb  7 00:57:42 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (parse_qstring): %q should allow terminator escape.

Wed Feb  7 00:57:42 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_equal): all option flags should be same to be equal.

Tue Feb  6 21:01:29 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb: ignore EOFError on only specified case.

	* lib/net/http.rb: take HTTP 1.0 server into account.

Mon Feb 5 00:39:06 2001  KANEKO Naoshi  <wbs01621@mail.wbs.ne.jp>

	* dir.c: use ISXXX() instead of isxxx().

	* dln.c (aix_loaderror): ditto.

	* file.c (rb_file_s_expand_path): ditto.

	* string.c (rb_str_upcase_bang): ditto.

	* win32/win32.c (do_spawn): ditto.

	* win32/win32.c (NtMakeCmdVector): ditto.

	* win32/win32.c (opendir): ditto.

Fri Feb  3 00:48:50 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/win32.c (isInternalCmd): ignore case for shell's internal
	  command. (marge from HEAD)

Fri Feb  2 16:14:51 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (POP_VARS): propagate DVAR_DONT_RECYCLE, if
	  SCOPE_DONT_RECYCLE of ruby_scope is set.

Wed Jan 31 22:27:29 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: gcc-2.95.2-7(cygwin) support.
	  add -mwin32 if available.

	* cygwin/GNUmakefile: ditto.

Mon Jan 29 17:36:19 2001  TOYOFUKU Chikanobu  <toyofuku@juice.or.jp>

	* eval.c (rb_eval): nd_iter evaluation should be wrapped by
	  BEGIN_CALLARGS and END_CALLARGS.

Mon Jan 29 01:40:27 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_independent): should not clear str->orig here.
	  it's too early.

Wed Jan 24 01:45:49 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (POP_BLOCK_TAG): call rb_gc_force_recycle() if block has
	  not been objectified.

	* eval.c (rb_callcc): should nail down block->tag history to avoid