@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.2"
-#define RUBY_RELEASE_DATE "2001-02-02"
+#define RUBY_RELEASE_DATE "2001-02-08"
 #define RUBY_VERSION_CODE 162
-#define RUBY_RELEASE_CODE 20010202
+#define RUBY_RELEASE_CODE 20010208
